# rust-zero2prod

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: rust.yml
.sqlx/: query-c3343012604ac25170c74ecc5f6ef2f4c0d173fa84995cb4e7b7f0f6e3d55300.json
config/: base.yaml
migrations/: 20240303055326_add_status_to_subscriptions.sql  20240303060220_make_status_not_null_in_subscriptions.sql  20240303060528_create_subscriptions_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
